# gama_tts_vtm_plugin_example

./: CMakeLists.txt  README.md
data/voice/english/5_male/: vtm.txt
src/: vtm_gama_tts.cpp  vtm_gama_tts.h
src/vtm/: Log.cpp  Log.h
